# slorp-language

./: .gitignore  CMakeLists.txt  README.md  grammar.txt  test.slorp
src/: chunk.c  compiler.c  debug.c  error.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
src/include/: chunk.h  common.h  compiler.h  debug.h  error.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
